fixed nav bar spacing

--- a/docs/main.css
+++ b/docs/main.css
@@ -29,27 +29,32 @@ body {
 
 nav {
   display: flex;
-  justify-content: flex-end;
+  justify-content: space-between;
   align-items: center;
   height: 60px;
-  background-color: none;
-  border: solid;
+  font-weight: 700;
+  border:solid;
+  padding: 1% 10%;
 }
 
 .nav-links {
-  border: none;
+  border: solid;
   display: flex;
   list-style: none;
-  margin-right: 5%;
-  padding: 0;
-  gap: 100px;
+  padding: 0%;
+  gap: 70px;
 }
 
-.nav-links li {
-  margin: 0 10px;
-}
+
 
 .nav-links a {
+  color: #22223b;
+  text-decoration: none;
+}
+
+#return-home {
+  align-items: center;
+  border:solid;
   color: #101010;
   text-decoration: none;
 }
